--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -41,14 +41,17 @@ jobs:
           version: 'latest'
 
       - name: Setup kubeconfig
-        run: |
-          echo "${{ secrets.KUBECONFIG_DATA }}" | base64 --decode > kubeconfig
-          export KUBECONFIG=$PWD/kubeconfig
-          kubectl config get-contexts
+  run: |
+    echo "${{ secrets.KUBECONFIG_DATA }}" | base64 --decode > kubeconfig
+    export KUBECONFIG=$PWD/kubeconfig
+    kubectl config get-contexts
+    kubectl cluster-info
 
-      - name: Deploy to Kubernetes
-        run: |
-          kubectl apply -f deployment.yaml
-          kubectl apply -f service.yaml
-          kubectl get pods -o wide
-          kubectl get svc
+     - name: Deploy to Kubernetes
+  run: |
+    export KUBECONFIG=$PWD/kubeconfig
+    kubectl apply -f deployment.yaml
+    kubectl apply -f service.yaml
+    kubectl get pods -o wide
+    kubectl get svc
+
