--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,6 +40,17 @@ jobs:
         with:
           version: 'latest'
 
+      - name: Load image into Minikube
+        run: minikube image load docker-jenkins-demo:latest
+
+      
+      - name: Setup kubeconfig
+        run: |
+          export KUBECONFIG=$HOME/.kube/config
+          kubectl config use-context minikube
+          kubectl config get-contexts
+          kubectl cluster-info
+
       - name: Deploy to Kubernetes
         run: |
           kubectl apply -f deployment.yaml --validate=false
